// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-efQSVx crwSrw"
  >
    <h5
      class="sc-iAKWXU htnGme"
    >
      Node labels
    </h5>
    <div
      class="sc-cTAqQK iafBwP"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-efQSVx crwSrw"
  >
    <h5
      class="sc-iAKWXU htnGme"
    >
      Node labels
    </h5>
    <div
      class="sc-cTAqQK iafBwP"
    >
      <div
        class="sc-dkPtRN sc-hKwDye gJGlWw bXUoVD"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-dkPtRN sc-hKwDye gJGlWw bXUoVD"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-dkPtRN sc-hKwDye gJGlWw bXUoVD"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-efQSVx crwSrw"
  >
    <h5
      class="sc-iAKWXU htnGme"
    >
      Property keys
    </h5>
    <div
      class="sc-cTAqQK iafBwP"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-efQSVx crwSrw"
  >
    <h5
      class="sc-iAKWXU htnGme"
    >
      Property keys
    </h5>
    <div
      class="sc-cTAqQK iafBwP"
    >
      <div
        class="sc-dkPtRN sc-jRQBWg gJGlWw jorKCB"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-dkPtRN sc-jRQBWg gJGlWw jorKCB"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-efQSVx crwSrw"
  >
    <h5
      class="sc-iAKWXU htnGme"
    >
      Relationship types
    </h5>
    <div
      class="sc-cTAqQK iafBwP"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-efQSVx crwSrw"
  >
    <h5
      class="sc-iAKWXU htnGme"
    >
      Relationship types
    </h5>
    <div
      class="sc-cTAqQK iafBwP"
    >
      <div
        class="sc-dkPtRN sc-eCImPb gJGlWw jVyDIa"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-dkPtRN sc-eCImPb gJGlWw jVyDIa"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-dkPtRN sc-eCImPb gJGlWw jVyDIa"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
